microservices/supply-chain-planning/iac/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oya-supply-chain-planning-default-deny
spec:
  podSelector:
    matchLabels:
      app: oya-supply-chain-planning
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              oya-ingress: "true"
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              oya-substrate: "true"
